# DeepLens

./: .gitignore  0_hello_deeplens.py  0_hello_defocuslens.py  0_hello_diffraclens.py  0_hello_geolens.py  0_hello_hybridlens.py  0_hello_paraxiallens.py  1_design_diffraclens.py  1_design_geolens.py  1_design_hybridlens.py  2_autolens_rms.py  3_psf_net.py  404.html  4_tasklens_img_classi.py  4f_system.py  6_hybridlens_design.py  8_multi_order_diffraction.py  9_autolens_aspheric.py  9_diffractive_surfaces.py  CITATION.cff  CITATION.md  CLAUDE.md  LICENSE  README.md  batch_sample_and_run.py  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run_aspheric_test.py  sitemap.xml  test_aspheric.py  test_seidel_aberration.py
.github/ISSUE_TEMPLATE/: bug_report.md
api/camera/: index.html
api/network/: index.html
api/optics/: index.html
api/sensor/: index.html
architecture/: index.html
configs/: 2_auto_lens_design.yml
contributing/: index.html
deeplens/: README.md  __init__.py  base.py  basics.py  camera.py  config.py  defocuslens.py  diffraclens.py  geolens.py  hybridlens.py  lens.py  loss.py  ops.py  paraxiallens.py  psfnetlens.py  utils.py
deeplens/diffractive_surface/: __init__.py  binary2.py  diffracted_rotation.py  diffractive.py  fresnel.py  (+6 more)
docs/: architecture.md  examples.md  index.md  index.rst  installation.md  quickstart.md  quickstart.rst  tutorials.md
examples/: index.html
installation/: index.html
quickstart/: index.html
research/: aspheric_design_principles.md
search/: search_index.json
stylesheets/: api.css
test/: conftest.py  prism_demo.py  test_basics.py  test_crash_regressions.py  test_defocuslens.py  test_device_selection.py  test_diffraclens.py  test_diffractive_surfaces.py  test_efficiency.py  test_geolens.py  test_geolens_eval.py  test_geolens_io.py  test_geolens_optim.py  test_geolens_tolerance.py  test_hybridlens.py  test_lens_api_conformance.py  test_loss.py  test_materials.py  test_minor_cleanup.py  test_monte_carlo.py  test_nan_guards.py  test_nonsquare_wave.py  test_paraxiallens.py  test_phase_surfaces.py  test_psf.py  test_ray.py  test_surfaces.py  test_surfaces_extended.py  test_utils.py  test_wave.py
tools/: build_refractiveindex_data.py
(+179 files in other folders)
