[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deeplens-core"
version = "1.5.2"
description = "DeepLens: differentiable optical lens simulator for end-to-end cameras."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Xinge Yang", email = "xinge.yang@kaust.edu.sa"}
]
requires-python = ">=3.12"
keywords = [
    "optics",
    "lens design",
    "differentiable rendering",
    "computational photography",
    "ray tracing",
    "pytorch",
    "optical simulation",
    "PSF",
    "diffractive optics",
    "end-to-end optimization",
    "differentiable optics",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch",
    "torchvision",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "scikit-image>=0.20.0",
    "transformers>=4.30.0",
    "lpips>=0.1.4",
    "einops>=0.7.0",
    "timm>=0.9.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipywidgets>=8.0.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "pymdown-extensions>=10.0",
]

[project.urls]
Homepage = "https://github.com/singer-yang/DeepLens"
Repository = "https://github.com/singer-yang/DeepLens"
Documentation = "https://vccimaging.github.io/DeepLens/"
Issues = "https://github.com/singer-yang/DeepLens/issues"
Changelog = "https://github.com/singer-yang/DeepLens/releases"

[tool.setuptools.package-data]
deeplens = ["optics/material/*.AGF", "optics/material/*.json"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.setuptools.packages.find]
where = ["."]
